package edu.hitsz.observer;

import edu.hitsz.prop.BaseProp;

public interface EnemyObserver {
    abstract public void update(BaseProp prop);
}
